# taskbrain-finance

./: .gitignore  PRIVACY.md  README.md  SECURITY.md
deploy/: caddy.example  taskbrain-finance-api.service  taskbrain-finance-security.cron  taskbrain-finance-sync.cron
docs/: financial-intelligence-module.md  plaid-sandbox-setup.md  production-linking-safety.md  security-program.md
finance/backend/: .env.example  alembic.ini  pyproject.toml
finance/backend/app/: __init__.py  main.py
finance/backend/app/api/: __init__.py  deps.py
finance/backend/app/api/routes/: ai.py  auth.py  budget.py  cash_flow.py  debt.py  health.py  investments.py  net_worth.py  plaid.py  planning.py  security.py  sync.py
finance/backend/app/core/: config.py  encryption.py  security.py
finance/backend/app/db/: __init__.py  models.py  repositories.py  session.py
finance/backend/app/jobs/: daily_sync.py
finance/backend/app/schemas/: ai.py  auth.py  plaid.py  planning.py  security.py
finance/backend/app/services/: ai_service.py  audit_log.py  plaid_service.py  sync_service.py
finance/backend/migrations/: env.py
finance/backend/migrations/versions/: 20260609_0001_initial_finance_schema.py  20260609_0002_planned_expenses.py  20260610_0003_financial_goals.py  20260610_0004_user_security_controls.py  20260610_0005_audit_and_review_controls.py
finance/backend/scripts/: deprovision_inactive_users.py  eol_check.py  local_security_check.py  security_audit.py
finance/frontend/: index.html  package-lock.json  package.json  vite.config.ts
finance/frontend/src/: main.tsx  styles.css
