[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbrain-finance-backend"
version = "0.1.0"
description = "Self-hosted TaskBrain financial intelligence backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "argon2-cffi>=23.1.0",
  "certifi>=2026.5.20",
  "cryptography>=42.0.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "openai>=1.93.0",
  "plaid-python>=29.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
